--- a/taxcalculator.html
+++ b/taxcalculator.html
@@ -18,7 +18,7 @@
         <ul>
             <img class="logo" src="resources/logo.svg" alt="Natujenge"/>
             <a class="home" href="#Home">Home</a>
-            <a class="bootcamp" href="#AboutBootcamp">Bootcamp</a>
+            <a class="bootcamp" href="https://www.meliora.co.ke/articles/nvrjgtnsgh5ophs6mm">Bootcamp</a>
             <a class="link" href="#Team">Team</a>
         </ul>
         
