added page within a page

--- a/about.html
+++ b/about.html
@@ -6,22 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Natujenge | About US</title>
 </head>
 
 <body>
     <section class="header">
         <div class="logo">
-
+            <img id="logo" src="resources/logo.svg" alt="Natujenge" width="150px">
         </div>
         <div class="nav-links">
             <ul>
                 <li><a href="index.html" id="">Home</a></li>
-                <li><a href="https://www.meliora.co.ke/articles/nvrjgtnsgh5ophs6mm" id="active">About Bootcamp</a></li>
+                <li><a href="about.html">About Bootcamp</a></li>
                 <li><a href="team.html" id="">Team</a></li>
             </ul>
         </div>
     </section>
+
+    <iframe src="https://www.meliora.co.ke/articles/nvrjgtnsgh5ophs6mm" style="height:600px;width:1500px; border: none; margin-left: 10px; background-color:lightslategray; border-color: aqua;" title="about"></iframe> 
 </body>
 
 </html>
