--- a/team.html
+++ b/team.html
@@ -131,8 +131,8 @@
             </div>
             <div class="col-xl-3 col-sm-6 mb-5">
               <div class="bg-white rounded shadow-sm py-5 px-4">
-                <img class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" src="https://d19m59y37dris4.cloudfront.net/university/1-1-1/img/teacher-2.jpg" alt width="100" />
-                <h5 class="mb-0">Bonface Mutea</h5>
+                <img class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm" src="resources/bonniea.png" alt width="100" />
+                <h5 class="mb-0">Boniface Mutea</h5>
                 <span class="small text-uppercase text-muted">Backend Developer</span>
                 <ul class="social mb-0 list-inline mt-3">
                   <li class="list-inline-item">
