about bootcamp team fix

--- a/team.html
+++ b/team.html
@@ -33,7 +33,7 @@
         <div class="nav-links">
             <ul>
                 <li><a href="index.html" id="">Home</a></li>
-                <li><a href="https://www.meliora.co.ke/articles/nvrjgtnsgh5ophs6mm" target="_blank">About Bootcamp</a></li>
+                <li><a href="about.html">About Bootcamp</a></li>
                 <li><a href="snipher.html" id="active">Team</a></li>
             </ul>
         </div>
@@ -224,9 +224,9 @@
       <div class="container text-muted py-4 py-lg-5">
         <ul class="list-inline">
           <li class="list-inline-item me-4">
-            <a class="link-secondary" href="#">Home</a></li>
+            <a class="link-secondary" href="index.html">Home</a></li>
           <li class="list-inline-item me-4">
-            <a class="link-secondary" href="#">About Bootcamp</a>
+            <a class="link-secondary" href="about.html"">About Bootcamp</a>
           </li>
           <li class="list-inline-item">
             <a class="link-secondary" href="#team">Team</a>
